// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`should store correct metadata 1`] = `
[
  {
    "access": "access_a",
    "chunk": false,
    "current_checksum": "c63ebdcbe00c06b7d93143056be2bb37d7edc77c5076c1dd3b1c9931f36ddb8a",
    "description": null,
    "entity_column": null,
    "filename": "doc1.md",
    "filepath": "datastores/pierre-production/files/doc1.md",
    "headers": 0,
    "id": "c63ebdcbe00c06b7d93143056be2bb37d7edc77c5076c1dd3b1c9931f36ddb8a",
    "need_rebuild": true,
    "previous_checksum": null,
    "sheet": 0,
    "type": "md",
  },
  {
    "access": "access_b",
    "chunk": false,
    "current_checksum": "c63ebdcbe00c06b7d93143056be2bb37d7edc77c5076c1dd3b1c9931f36ddb8a",
    "description": null,
    "entity_column": null,
    "filename": "doc1.md",
    "filepath": "datastores/pierre-production/files/doc1.md",
    "headers": 0,
    "id": "c63ebdcbe00c06b7d93143056be2bb37d7edc77c5076c1dd3b1c9931f36ddb8a",
    "need_rebuild": true,
    "previous_checksum": null,
    "sheet": 0,
    "type": "md",
  },
  {
    "access": "access_a",
    "chunk": false,
    "current_checksum": "7897a2d21d9787e908f88cbda8d72101023da9866859ec8827d80467188c143e",
    "description": null,
    "entity_column": null,
    "filename": "doc2.md",
    "filepath": "datastores/pierre-production/files/doc2.md",
    "headers": 0,
    "id": "7897a2d21d9787e908f88cbda8d72101023da9866859ec8827d80467188c143e",
    "need_rebuild": true,
    "previous_checksum": null,
    "sheet": 0,
    "type": "md",
  },
  {
    "access": "access_b",
    "chunk": false,
    "current_checksum": "7897a2d21d9787e908f88cbda8d72101023da9866859ec8827d80467188c143e",
    "description": null,
    "entity_column": null,
    "filename": "doc2.md",
    "filepath": "datastores/pierre-production/files/doc2.md",
    "headers": 0,
    "id": "7897a2d21d9787e908f88cbda8d72101023da9866859ec8827d80467188c143e",
    "need_rebuild": true,
    "previous_checksum": null,
    "sheet": 0,
    "type": "md",
  },
  {
    "access": "access_a",
    "chunk": false,
    "current_checksum": "cc5ba48bd090a7f8d0af494d4779dc019ec8b3b23024c83671833b5e67113f3a",
    "description": null,
    "entity_column": null,
    "filename": "doc3.md",
    "filepath": "datastores/pierre-production/files/doc3.md",
    "headers": 0,
    "id": "cc5ba48bd090a7f8d0af494d4779dc019ec8b3b23024c83671833b5e67113f3a",
    "need_rebuild": true,
    "previous_checksum": null,
    "sheet": 0,
    "type": "md",
  },
]
`;

exports[`should store correct metadata 2`] = `
[
  {
    "access": "access_a",
    "chunk": false,
    "current_checksum": "c63ebdcbe00c06b7d93143056be2bb37d7edc77c5076c1dd3b1c9931f36ddb8a",
    "description": null,
    "entity_column": null,
    "filename": "doc1.md",
    "filepath": "datastores/pierre-production/files/doc1.md",
    "headers": 0,
    "id": "c63ebdcbe00c06b7d93143056be2bb37d7edc77c5076c1dd3b1c9931f36ddb8a",
    "need_rebuild": true,
    "previous_checksum": "c63ebdcbe00c06b7d93143056be2bb37d7edc77c5076c1dd3b1c9931f36ddb8a",
    "sheet": 0,
    "type": "md",
  },
  {
    "access": "access_a",
    "chunk": false,
    "current_checksum": "7897a2d21d9787e908f88cbda8d72101023da9866859ec8827d80467188c143e",
    "description": null,
    "entity_column": null,
    "filename": "doc2.md",
    "filepath": "datastores/pierre-production/files/doc2.md",
    "headers": 0,
    "id": "7897a2d21d9787e908f88cbda8d72101023da9866859ec8827d80467188c143e",
    "need_rebuild": true,
    "previous_checksum": "7897a2d21d9787e908f88cbda8d72101023da9866859ec8827d80467188c143e",
    "sheet": 0,
    "type": "md",
  },
  {
    "access": "access_b",
    "chunk": false,
    "current_checksum": "7897a2d21d9787e908f88cbda8d72101023da9866859ec8827d80467188c143e",
    "description": null,
    "entity_column": null,
    "filename": "doc2.md",
    "filepath": "datastores/pierre-production/files/doc2.md",
    "headers": 0,
    "id": "7897a2d21d9787e908f88cbda8d72101023da9866859ec8827d80467188c143e",
    "need_rebuild": true,
    "previous_checksum": "7897a2d21d9787e908f88cbda8d72101023da9866859ec8827d80467188c143e",
    "sheet": 0,
    "type": "md",
  },
  {
    "access": "access_c",
    "chunk": false,
    "current_checksum": "7897a2d21d9787e908f88cbda8d72101023da9866859ec8827d80467188c143e",
    "description": null,
    "entity_column": null,
    "filename": "doc2.md",
    "filepath": "datastores/pierre-production/files/doc2.md",
    "headers": 0,
    "id": "7897a2d21d9787e908f88cbda8d72101023da9866859ec8827d80467188c143e",
    "need_rebuild": true,
    "previous_checksum": "7897a2d21d9787e908f88cbda8d72101023da9866859ec8827d80467188c143e",
    "sheet": 0,
    "type": "md",
  },
]
`;

exports[`should store correct metadata 3`] = `
[
  {
    "access": "access_a",
    "chunk": false,
    "current_checksum": "c63ebdcbe00c06b7d93143056be2bb37d7edc77c5076c1dd3b1c9931f36ddb8a",
    "description": null,
    "entity_column": null,
    "filename": "doc1.md",
    "filepath": "datastores/pierre-production/files/doc1.md",
    "headers": 0,
    "id": "c63ebdcbe00c06b7d93143056be2bb37d7edc77c5076c1dd3b1c9931f36ddb8a",
    "need_rebuild": false,
    "previous_checksum": "c63ebdcbe00c06b7d93143056be2bb37d7edc77c5076c1dd3b1c9931f36ddb8a",
    "sheet": 0,
    "type": "md",
  },
  {
    "access": "access_a",
    "chunk": false,
    "current_checksum": "7897a2d21d9787e908f88cbda8d72101023da9866859ec8827d80467188c143e",
    "description": null,
    "entity_column": null,
    "filename": "doc2.md",
    "filepath": "datastores/pierre-production/files/doc2.md",
    "headers": 0,
    "id": "7897a2d21d9787e908f88cbda8d72101023da9866859ec8827d80467188c143e",
    "need_rebuild": false,
    "previous_checksum": "7897a2d21d9787e908f88cbda8d72101023da9866859ec8827d80467188c143e",
    "sheet": 0,
    "type": "md",
  },
  {
    "access": "access_b",
    "chunk": false,
    "current_checksum": "7897a2d21d9787e908f88cbda8d72101023da9866859ec8827d80467188c143e",
    "description": null,
    "entity_column": null,
    "filename": "doc2.md",
    "filepath": "datastores/pierre-production/files/doc2.md",
    "headers": 0,
    "id": "7897a2d21d9787e908f88cbda8d72101023da9866859ec8827d80467188c143e",
    "need_rebuild": false,
    "previous_checksum": "7897a2d21d9787e908f88cbda8d72101023da9866859ec8827d80467188c143e",
    "sheet": 0,
    "type": "md",
  },
  {
    "access": "access_c",
    "chunk": false,
    "current_checksum": "7897a2d21d9787e908f88cbda8d72101023da9866859ec8827d80467188c143e",
    "description": null,
    "entity_column": null,
    "filename": "doc2.md",
    "filepath": "datastores/pierre-production/files/doc2.md",
    "headers": 0,
    "id": "7897a2d21d9787e908f88cbda8d72101023da9866859ec8827d80467188c143e",
    "need_rebuild": false,
    "previous_checksum": "7897a2d21d9787e908f88cbda8d72101023da9866859ec8827d80467188c143e",
    "sheet": 0,
    "type": "md",
  },
]
`;

exports[`should store correct metadata 4`] = `
[
  {
    "access": "access_a",
    "chunk": false,
    "current_checksum": "c6e612e0fbe7db1dab56b0c1feb9ceb4de387890f09fd5b19131d49cb3a32c7c",
    "description": null,
    "entity_column": null,
    "filename": "doc1.md",
    "filepath": "datastores/pierre-production/files/doc1.md",
    "headers": 0,
    "id": "c6e612e0fbe7db1dab56b0c1feb9ceb4de387890f09fd5b19131d49cb3a32c7c",
    "need_rebuild": true,
    "previous_checksum": "c63ebdcbe00c06b7d93143056be2bb37d7edc77c5076c1dd3b1c9931f36ddb8a",
    "sheet": 0,
    "type": "md",
  },
  {
    "access": "access_a",
    "chunk": false,
    "current_checksum": "7897a2d21d9787e908f88cbda8d72101023da9866859ec8827d80467188c143e",
    "description": null,
    "entity_column": null,
    "filename": "doc2.md",
    "filepath": "datastores/pierre-production/files/doc2.md",
    "headers": 0,
    "id": "7897a2d21d9787e908f88cbda8d72101023da9866859ec8827d80467188c143e",
    "need_rebuild": false,
    "previous_checksum": "7897a2d21d9787e908f88cbda8d72101023da9866859ec8827d80467188c143e",
    "sheet": 0,
    "type": "md",
  },
  {
    "access": "access_b",
    "chunk": false,
    "current_checksum": "7897a2d21d9787e908f88cbda8d72101023da9866859ec8827d80467188c143e",
    "description": null,
    "entity_column": null,
    "filename": "doc2.md",
    "filepath": "datastores/pierre-production/files/doc2.md",
    "headers": 0,
    "id": "7897a2d21d9787e908f88cbda8d72101023da9866859ec8827d80467188c143e",
    "need_rebuild": false,
    "previous_checksum": "7897a2d21d9787e908f88cbda8d72101023da9866859ec8827d80467188c143e",
    "sheet": 0,
    "type": "md",
  },
  {
    "access": "access_c",
    "chunk": false,
    "current_checksum": "7897a2d21d9787e908f88cbda8d72101023da9866859ec8827d80467188c143e",
    "description": null,
    "entity_column": null,
    "filename": "doc2.md",
    "filepath": "datastores/pierre-production/files/doc2.md",
    "headers": 0,
    "id": "7897a2d21d9787e908f88cbda8d72101023da9866859ec8827d80467188c143e",
    "need_rebuild": false,
    "previous_checksum": "7897a2d21d9787e908f88cbda8d72101023da9866859ec8827d80467188c143e",
    "sheet": 0,
    "type": "md",
  },
]
`;
